--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="p18.css">
+    <link rel="stylesheet" href="/css/basic.css">
 </head>
 <body>
     <div class="header">
@@ -134,7 +134,6 @@
         <div class="footer-copyright">
             Copyright &copy  2020 by Lien Chun Wei
         </div>
-        <p>Git add test</p>
     </div>
 </body>
 </html>
