--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/basic.css">
+    <link rel="stylesheet" href="css/basic.css">
 </head>
 <body>
     <div class="header">
         <div class="logo">
-            <img src="pic/book_logo.png"/>
+            <!--
+                <img src="pic/book_logo.png"/>
+            -->
         </div>
         <nav class="header-nav">
             <a href="#">最新消息</a>
