--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            <!--
-                <img src="pic/book_logo.png"/>
-            -->
+        <div class="logo">            
+                <img src="https://picsum.photos/100/100?random=1"/>            
         </div>
         <nav class="header-nav">
             <a href="#">最新消息</a>
