--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <p>知識好象砂石下面的泉水</p>
                 <p>越掘得深泉水越清</p>
             </div>
+            <div id="mouse-icon"></div>
         </div>
         
         <div class="talent-skills container" id="talent-skills-bookM">
